--- a/platformio.ini
+++ b/platformio.ini
@@ -58,12 +58,13 @@ build_flags =
   -DSK_INVERT_ROTATION=1
   -DSK_ALS=1
 
-  -DPIN_UH=26
-  -DPIN_UL=25
+  -DPIN_UH=25 #26
+  -DPIN_UL=33 #25
   -DPIN_VH=27
-  -DPIN_VL=32
+  -DPIN_VL=35 #32
   -DPIN_WH=12
-  -DPIN_WL=33
+  -DPIN_WL=32 #33
+  -DPIN_SPKR=26
   -DPIN_BUTTON_NEXT=-1
   -DPIN_BUTTON_PREV=-1
   -DPIN_SDA=15
