--- a/platformio.ini
+++ b/platformio.ini
@@ -50,12 +50,13 @@ lib_deps =
 
 build_flags =
   ${base_config.build_flags}
+  -DSK_BLE=1
   -DSK_DISPLAY=1
   -DSK_LEDS=1
   -DNUM_LEDS=8
   -DSENSOR_MT6701=1
   -DSK_STRAIN=1
-  -DSK_INVERT_ROTATION=1
+  -DSK_INVERT_ROTATION=0
   -DSK_ALS=1
 
   -DPIN_UH=25 #26
@@ -75,6 +76,9 @@ build_flags =
   -DPIN_LED_DATA=7
   -DPIN_LCD_BACKLIGHT=19
 
+  -DPIN_STRAIN_DO=38
+  -DPIN_STRAIN_SCK=2
+  
   -DDESCRIPTION_FONT=Roboto_Thin_24
   -DDESCRIPTION_Y_OFFSET=20
   -DVALUE_OFFSET=30
