--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ extends = base_config
 board = esp32doit-devkit-v1
 lib_deps =
   ${base_config.lib_deps}
+  ;arduino-libraries/ArduinoBLE@^1.3.7
   bodmer/TFT_eSPI@2.4.25
   fastled/FastLED @ 3.5.0
   bogde/HX711 @ 0.7.5
