BLE some values correct / button added: works / started with onWrite()

--- a/platformio.ini
+++ b/platformio.ini
@@ -67,7 +67,7 @@ build_flags =
   -DPIN_WH=12
   -DPIN_WL=32 #33
   -DPIN_SPKR=26
-  -DPIN_BUTTON_NEXT=-1
+  -DPIN_BUTTON_NEXT=4
   -DPIN_BUTTON_PREV=-1
   -DPIN_SDA=15
   -DPIN_SCL=8
@@ -95,7 +95,7 @@ build_flags =
   -DTFT_SCLK=20
   -DTFT_CS=21
   -DTFT_DC=22
-  -DTFT_RST=4
+  -DTFT_RST=-1 #4
   -DTFT_BL=-1
   -DLOAD_GLCD=1
   -DLOAD_GFXFF=1
